# core

./: .env.example  .gitignore  404.html  ARCHIVE_CONTENTS.md  AUDIT_EXPORT_GUIDE.md  CHANGELOG.md  CLIENT_VALUE_PROPOSITION.md  COMPLETE_SYSTEM_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DEMO_GUIDE.md  DEVELOPMENT_STATUS.md  Dockerfile.opspilotos  EMAIL_ACTIVATION_INSTRUCTIONS.md  EMAIL_SETUP_GUIDE.md  ENTERPRISE_FIXES_TEST_REPORT.md  OPSPILOTOS_QUICKSTART.md  P0_BLOCKERS_FIX_GUIDE.md  P0_FIXES_COMPLETE.md  P0_FIXES_DEPLOYMENT.md  P0_FIXES_SUMMARY.md  PILOT_READY_CHECKLIST.md  README.md  deploy-option2-local.sh  deploy-to-production.sh  docker-compose.chain.yml  docker-compose.opspilotos.yml  index.html  mkdocs.yml  p0.patch  p0_fixes_applied.patch  policy_schema_compatibility.patch  prepare-github-push.sh  pyproject.toml  requirements.opspilotos.txt  setup-https.sh  sitemap.xml  start-service.sh  test_enterprise_fixes.py  uapk-gateway.service  verify-before-cleanup.sh
.github/workflows/: docs.yml
47ers/: index.html
DLTEST/: BUSINESS_INSTANCE_SUMMARY.md  EVALUATOR_INDEX.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  UAPK_BUSINESS_INSTANCE_CERTIFICATE.md
api/: index.html
api/approvals/: index.html
api/authentication/: index.html
api/endpoints/: index.html
api/gateway/: index.html
api/logs/: index.html
api/manifests/: index.html
api/organizations/: index.html
api/overview/: index.html
architecture/concepts/: index.html
architecture/overview/: index.html
architecture/security/: index.html
backend/: alembic.ini
backend/app/: main.py
backend/tests/: test_p0_fixes_integration.py
business/: index.html
business/PILOT_SOW_TEMPLATE/: index.html
business/pilot/: index.html
business/pitch/: index.html
business/pricing/: index.html
business/support/: index.html
concepts/: index.html
concepts/approvals/: index.html
concepts/capabilities/: index.html
concepts/decisions/: index.html
concepts/future-proof/: index.html
concepts/logs/: index.html
concepts/manifest/: index.html
contracts/: BusinessInstanceNFT.sol
demo/: index.html
deploy/systemd/: uapk-chain.service  uapk-compiler.service  uapk-gateway.service
deployment/: index.html
deployment/backups/: index.html
deployment/caddy/: index.html
deployment/monitoring/: index.html
deployment/single-vm/: index.html
development/contributing/: index.html
development/decisions/: index.html
docs/: IMPLEMENTATION_GUIDE.md  index.md  quickstart.md  roadmap.md
docs/_audit/: M1_IMPLEMENTATION_NOTES.md  UAPK_VISION_ALIGNMENT_SCORECARD.md  UAPK_VISION_ALIGNMENT_SCORECARD.yaml  UAPK_VISION_ALIGNMENT_SCORECARD_DIFF.md  VM_TRANSFORMATOR_MVP_NOTES.md
docs/api/: endpoints.md  override_tokens.md  overview.md
docs/archive/: ARCHIVE_VERIFICATION_REPORT.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  EVALUATION_PACKAGE_README.md  EVALUATOR_INDEX.md  MILESTONES_COMPLETE.md  P0_SECURITY_FIXES_COMPLETE.md  PACKAGE_INDEX.md  PHASE5_TESTING_PLAN.md  POLICY_SCHEMA_COMPATIBILITY.md  PRODUCTION_LIVE.md  REPORT_UAPK_GATEWAY.md  SCORECARD_DELIVERY_SUMMARY.md  SECURITY_FIXES_v0.2.1.md  SESSION_START_REPORT.md  TEST_RESULTS.md  THIS_VM_DEPLOYMENT_PLAN.md  UAPK_EVALUATION_PACKAGE_DELIVERY_NOTE.md
docs/audit/: signature_verification.md
docs/business/: CLIENT_IMPLEMENTATION_GUIDE.md  CLIENT_ONBOARDING_CHECKLIST.md  PILOT_SOW_TEMPLATE.md  index.md  pitch.md  pricing.md  support.md
docs/connectors/: README.md
docs/deployment/: DEPLOYMENT_COSTS_EXPLAINED.md  DEPLOYMENT_METHODS_DETAILED.md  FIREWALL_SETUP_GUIDE.md  deploy-option3-cloud.md  index.md  secrets.md  vm_transformator_mvp.md
docs/development/: CODEBASE_GAP_MAP.md
docs/guides/: agent-integration.md
docs/operations/: CLIENT_INVOICE_MANAGEMENT.md  END_TO_END_TEST_SCENARIO.md  GATEWAY_TESTING_GUIDE.md  README_OPSPILOTOS.md
docs/protocol/: manifest_schema.md  versioning.md
docs/security/: policy.md
fixtures/deliverable_requests/: sample_request.json
fixtures/kb/: cloud_architecture_best_practices.md  saas_pricing_strategies.md
guides/agent-integration/: index.html
guides/approvals/: index.html
manifests/: opspilotos.uapk.jsonld  opspilotos_canonical.uapk.json  plan.lock.json
operator/: index.html
quickstart/: index.html
roadmap/: index.html
schemas/: manifest.v1.schema.json
scripts/: bootstrap_demo.sh  demo_harness.py  e2e_vm_transformator_demo.sh  run_e2e_demo.sh  validate_p0_fixes.sh  verify_m1.sh
sdks/python/: BUILD_AND_PUBLISH.sh  CHANGELOG.md  LICENSE  MANIFEST.in  PACKAGE_MANIFEST.md  PUBLISHING_GUIDE.md  README.md  READY_FOR_PYPI.md  TESTING_REPORT.md  pyproject.toml  pytest.ini  run_tests.sh  setup.py  simple_verify.py  verify_package.py  verify_tests.py
sdks/python/examples/: README.md  async_usage.py  langchain_integration.py  openai_function_calling.py  quickstart.py
sdks/python/tests/: README.md  __init__.py  conftest.py  test_async_client.py  test_client.py  test_exceptions.py  test_langchain_integration.py  test_models.py
sdks/python/uapk_gateway/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdks/python/uapk_gateway/integrations/: __init__.py  langchain.py
search/: search_index.json
security/: index.html
templates/: example_vars.yaml  minimal_business.template.jsonld  opspilotos.template.jsonld
tests/: test_api_rbac.py  test_audit_export.py  test_conformance.py  test_connectors.py  test_fleet.py  test_manifest_migrations.py  test_manifest_schema.py  test_manifest_signing.py  test_minimal.py  test_multi_instance.py  test_nft_metadata.py  test_override_tokens.py  test_platform_paths.py  test_scorecard_artifacts_exist.py  test_template_compilation.py  test_upgrade.py  test_web3_deployment.py  test_web3_minting.py
uapk/: __init__.py  audit.py  audit_export.py  cas.py  cli.py  fleet_registry.py  interpreter.py  manifest_migrations.py  manifest_schema.py  manifest_signing.py  policy.py  runtime.py  tax.py  template_engine.py  upgrade_engine.py
uapk/api/: auth.py  (+10 more)
website/: contact-form-standalone.html  docusaurus.config.ts  package-lock.json
(+195 files in other folders)
